--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,9 +7,12 @@
     <div class="center jumbotron">
       <h1>Time Tracker 3000</h1>
       <p>
-        Track all your time with the Time Tracker 3000 - 60/60/24/7/52/365
+        Track how you spend your time with the Time Tracker 3000
       </p>
       <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+      <br>
+      <br>
+      <%= link_to "Log in now!", login_path, class: "btn btn-lg btn-primary" %>
       </div>
 </div>
   </body>
