--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,12 +19,26 @@
             <li><%= link_to "Home",   root_path %></li>
             <li><%= link_to "Help",   help_path %></li>
             <li><%= link_to "About",  about_path %></li>
-            <li><%= link_to "Log in", signup_path %></li>
+            <% if logged_in? %>
+              <li class="dropdown">
+                <a href ="#" class="dropdown-toggle" data-toggle="dropdown">Account<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><%=link_to "Profile", current_user%></li>
+                  <li><%=link_to "Seetings",'#' %></li>
+                  <li class='divider'></li>
+                    <li> <%=link_to "Log out", logout_path, method: "delete"%></li>
+                  </li>
+                </ul>
+              </li>
+            <% else %>
+              <li><%= link_to "Log in", login_path %></li>
+            <% end %>
           </ul>
         </nav>
       </div>
     </header>
     <div class="container">
+
       <%= yield %>
     </div>
   </body>
