--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing User</h1>
+<% provide(:button_text, "Save changes") %>
+<div class="jumbotron center">
+<h1>Update Your Profile</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Cancel', @user %> 
+</div>
