--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,6 +62,11 @@ textarea {
   color: #fae596 ;
 }
 
+#link > a 
+{
+  color: #173e43 ;
+}
+
 .btn {
   background-color:#173e43 ;
   color:#3fb0ac ;
