--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,9 @@
   </head>
   <body>
     <div class="center jumbotron">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
       <h1>Time Tracker 3000</h1>
       <p>
         Track how you spend your time with the Time Tracker 3000
